# smor

./: .gitignore  CMakeLists.txt  README.md  link.ld
docs/: apic.md  ata.md  misc.md
src/: acpi.c  acpi.h  ata.c  ata.h  boot.S  cond.c  cond.h  console.c  console.h  cpu.c  cpu.h  cpu_exception.c  cpu_exception.h  fb_cons.c  fb_cons.h  fb_font.c  imps.c  imps.h  interrupt.c  interrupt.h  io.h  io_apic.c  io_apic.h  isr.S  kbd_8042.c  kbd_8042.h  kernel.c  kernel.h  kmalloc.c  kmalloc.h  kterm.c  kterm.h  list.h  local_apic.c  local_apic.h  main.c  multiboot.c  multiboot.h  pci.c  pci.h  (+34 more)
